# hstats

./: .gitignore  hstats.cabal
src/Math/: Statistics.hs
tests/: Mean_Tests.hs  Test.hs
