Name:                hstats
Version:             0.3.1
build-type:          Simple
License:             BSD3
License-file:        LICENSE
Author:              Marshall Beddoe
Copyright:           Copyright (c) 2008, Marshall Beddoe
category:            Math
synopsis:            Statistical Computing in Haskell
description:         A library of commonly used statistical functions
maintainer:          mbeddoe@<nospam>gmail.com
homepage:            http://github.com/unmarshal/hstats/
cabal-version:       >=1.18

library
  exposed-modules:
    Math.Statistics
  build-depends:
  base >= 3.0 && < 5.0,
    Cabal >=1.18
  hs-source-dirs: src
  ghc-options: -Wall
  default-language: Haskell2010

test-suite tests
  type: exitcode-stdio-1.0
  main-is: Test.hs
  build-depends:
    base >=3.0 && <5.0,
    Cabal >=1.18,
    tasty >=0.10,
    tasty-hunit >=0.9,
    tasty-quickcheck -any,
    tasty-smallcheck -any
  default-language: Haskell2010
  hs-source-dirs: tests
